Fix footer z-index

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1075,7 +1075,7 @@ a:hover {
 .siteFooter {
   padding: 60px 0 100px;
   margin-top: $grid-unit * 3;
-  z-index: 10000;
+  z-index: 100;
   position: relative;
 }
 
